--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate-types": "npx supabase gen types typescript --project-id=iqbmhaqiohbbwsihdtcz > ./src/types/db.ts"
   },
   "dependencies": {
+    "@monaco-editor/react": "4.4.6",
+    "@supabase/auth-helpers-nextjs": "0.5.6",
+    "@supabase/supabase-js": "2.10.0",
     "@types/node": "18.15.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "encoding": "0.1.13",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
