[DEV]: add supabase as dev dependency

--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "supabase": "^1.45.2"
   }
 }
