[DEV]: replace next Image component with img tag
Also, remove @next/next/no-img-element eslint rule

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   "extends": "next/core-web-vitals",
   "rules": {
-    "no-unused-vars": "error"
+    "no-unused-vars": "error",
+    "@next/next/no-img-element": "off"
   }
 }
