--- a/package.json
+++ b/package.json
@@ -13,18 +13,16 @@
     "@monaco-editor/react": "4.4.6",
     "@supabase/auth-helpers-nextjs": "0.5.6",
     "@supabase/supabase-js": "2.10.0",
-    "@types/node": "18.15.1",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
     "encoding": "0.1.13",
-    "eslint": "8.36.0",
-    "eslint-config-next": "13.2.4",
+    "html2canvas": "1.4.1",
     "next": "13.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "supabase": "^1.45.2"
+    "eslint": "8.36.0",
+    "eslint-config-next": "13.2.4",
+    "supabase": "1.45.3",
+    "typescript": "4.9.5"
   }
 }
