--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "@types/node": "18.15.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "autoprefixer": "10.4.14",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "postcss": "8.4.21",
     "supabase": "1.45.3",
+    "tailwindcss": "3.3.1",
     "typescript": "4.9.5"
   }
 }
