--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,7 @@
   "extends": "next/core-web-vitals",
   "rules": {
     "no-unused-vars": "error",
-    "@next/next/no-img-element": "off"
+    "@next/next/no-img-element": "off",
+    "react/no-unused-prop-types": "error"
   }
 }
