[REFACTOR]: replace manual icons with Tabler Icons

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@monaco-editor/react": "4.5.0",
     "@supabase/auth-helpers-nextjs": "0.6.0",
     "@supabase/supabase-js": "2.17.0",
+    "@tabler/icons-react": "2.16.0",
     "emmet-monaco-es": "5.2.1",
     "encoding": "0.1.13",
     "html2canvas": "1.4.1",
