--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-image-crop": "10.0.9"
+    "react-image-crop": "10.0.9",
+    "react-select": "5.7.3"
   },
   "devDependencies": {
     "@types/node": "18.15.1",
