--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "js-base64": "3.7.5",
     "monaco-editor": "0.37.1",
     "monaco-tailwindcss": "0.6.0",
-    "next": "13.4.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "latest",
+    "react": "latest",
+    "react-dom": "latest",
     "react-image-crop": "10.0.9",
     "react-select": "5.7.3"
   },
@@ -34,7 +34,7 @@
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "eslint": "8.43.0",
-    "eslint-config-next": "13.4.6",
+    "eslint-config-next": "latest",
     "postcss": "8.4.21",
     "supabase": "1.50.2",
     "tailwindcss": "3.3.1",
