--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react": "latest",
     "react-dom": "latest",
     "react-image-crop": "10.0.9",
-    "react-select": "5.7.3"
+    "react-select": "5.7.3",
+    "zustand": "4.4.3"
   },
   "devDependencies": {
     "@types/node": "20.3.1",
